--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <!-- splash -->
 <div id="welcome" class="welcome">
-<h1> Welcome to the England and Wales land onwership map</h1>
+<h1> Welcome to the England and Wales land ownership map</h1>
 <p>This map is intended to help people understand land ownership in England and Wales. It maps data published by the <a href = "https://www.gov.uk/government/organisations/land-registry">Land Registry</a>. For code and more information on data and methods see the <a href="https://github.com/mem48/LandOwnership/">GitHub repo</a>.</p>
 
 
@@ -104,10 +104,10 @@ function closewelcome() {
 The map shows two types of data:
 
 <h2>Inspire Polygons</h2>
-<p>The Inspire polygons show the boundaries of freehold land registered with the Land Registry. Not all land ownership is registered with the Land Registry, so the map has some gaps. Also, due to the size of the dataset, we can't map all the polygons when zoomed out. When zoomed out you will only see polygons greater than 100 acres, at medium zooms only polygons greater than 10 acres. To see the full dataset, zoom in. </p>
+<p>The Inspire polygons show the boundaries of freehold land registered with the Land Registry. Not all land ownership is registered with the Land Registry, so the map has some gaps. Also, due to the size of the dataset, we can't map all the polygons when zoomed out. When zoomed out, you will only see polygons greater than 100 acres; at medium zooms, only polygons greater than 10 acres. To see the full dataset, zoom in. </p>
 
 <h2>Ownership Points</h2>
-<p>The Land Registry does not publish data on who owns every piece of land in England and Wales, but they do publish data on some types of organisations. Specifically UK and overseas companies that own land. This map shows the point locations of these properties. The geocoding is a work in progress and more data will be added soon.</p> 
+<p>The Land Registry does not publish data on who owns every piece of land in England and Wales. Still, they do publish data on some types of organisations. Specifically UK and overseas companies that own land. This map shows the point locations of these properties. The geocoding is a work in progress, and more data will be added soon.</p> 
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
@@ -136,7 +136,7 @@ The map shows two types of data:
   <td align='right' id="Company_No">NA</td>
 </tr>
 <tr>
-  <td><abbr title="The type of comapny">Category</abbr></td>
+  <td><abbr title="The type of company">Category</abbr></td>
   <td align='right' id="Category">NA</td>
 </tr>
 <tr>
