--- a/index.html
+++ b/index.html
@@ -99,13 +99,7 @@ function closewelcome() {
 
 
 <!-- map -->
-<div id="map" class="map" style='width: 100%; height: 600px;'>
-<script type="text/javascript">
-
-
-</script>
-<!-- map -->
-</div>
+<div id="map" class="map" style='width: 100%; height: 600px;'></div>
 <h1>Interactive map of Land Registry data</h1>
 
 <p>This map is intended to help people understand land ownership in England and Wales. It maps data published by the Land Registry. For code and more information on data and methods see the <a href="https://github.com/mem48/LandOwnership/">GitHub repo</a>.</p>
