--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ The map shows two types of data:
 <p>The Inspire polygons show the boundaries of freehold land registered with the Land Registry. Not all land ownership is registered with the Land Registry, so the map has some gaps. Also, due to the size of the dataset, we can't map all the polygons when zoomed out. When zoomed out, you will only see polygons greater than 100 acres; at medium zooms, only polygons greater than 10 acres. To see the full dataset, zoom in. </p>
 
 <h2>Ownership Points</h2>
-<p>The Land Registry does not publish data on who owns every piece of land in England and Wales.  But they do publish data on UK and overseas companies that own land. This map shows the locations of these properties by parsing the text of the land titles detect and geocode addresses.  This is an imperfect process and the data is unstructured and complex, so there will be errors and missing data. The geocoding is a work in progress, currently about 1.5 million addresses have been mapped and more data will be added soon.</p>
+<p>The Land Registry does not publish data on who owns every piece of land in England and Wales.  But they do publish data on UK and overseas companies that own land. This map shows the locations of these properties by parsing the text of the land titles to detect and geocode addresses.  This is an imperfect process and the data is unstructured and complex, so there will be errors and missing data. The geocoding is a work in progress, currently about 4.4 million addresses have been mapped and more data will be added soon. As I have just dectected and geocodes addresses the points may not be in the correct locations. For example, "the field behind 4 Privet Drive" is not the same as "4 Privet Drive" but we can't geocode "the field behind" so the point will appear in the house. Therfore it to best to think of the points as in the vicinity of the correct address rather than an exact location.</p>
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
@@ -143,11 +143,11 @@ The map shows two types of data:
   <td align='right' id="Category">NA</td>
 </tr>
 <tr>
-  <td><abbr title="The address registered with the Land Registry; this may be multiple addresses per title">Property Address</abbr></td>
+  <td><abbr title="The address registered with the Land Registry; this may be multiple addresses per title">Title description</abbr></td>
   <td align='right' id="Property_Address">NA</td>
 </tr>
 <tr>
-  <td><abbr title="The address that was used to locate the point. This should be the same as the Property Address but may differ if the title included multiple addresses or if the geocoder has misinterpreted the address">Geocoded address</abbr></td>
+  <td><abbr title="The address that was used to locate the point. This should be the same as the Title description but may differ if the title included multiple addresses or if the geocoder has misinterpreted the address">Geocoded address</abbr></td>
   <td align='right' id="geocoded_address">NA</td>
 </tr>
 <tr>
