Names longer than 1 character

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ function closewelcome() {
   var checkBox1 = document.getElementById("Consentcheckbox");
   var checkBox2 = document.getElementById("Cookiescheckbox");
   var namebox = document.getElementById("namebox");
-  if(checkBox1.checked === true & checkBox2.checked === true & namebox.value.length != 0){
+  if(checkBox1.checked === true & checkBox2.checked === true & namebox.value.length > 3){
     if (x.style.display === "none") {
       x.style.display = "block";
     } else {
