--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
 <meta http-equiv="content-type" content="text/html">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="Description" content="Land ownership in England and Wales">
+<title>Land ownership in England and Wales</title>
+
+<!--  Social Media Tags -->
+<meta property="og:title" content="Land ownership in England and Wales">
+<meta property="og:description" content="An interactive map showing company land ownership in England and Wales">
+<meta property="og:image" content="/images/thumbnail.jpg">
+<meta property="twitter:image" content="https://mem48.github.io/LandOwnership/images/thumbnail.jpg">
+<meta property="og:url" content="https://mem48.github.io/LandOwnership/">
+<meta name="twitter:card" content="summary_large_image">
+<meta property="og:site_name" content="Land ownership in England and Wales">
+<meta name="twitter:image:alt" content="Land ownership thumbnail">
+
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SFVXHLPJ8H"></script>
