Update for oversees

--- a/index.html
+++ b/index.html
@@ -151,6 +151,10 @@ The map shows two types of data:
   <td align='right' id="Company_No">NA</td>
 </tr>
 <tr>
+  <td><abbr title="Company country">Country</abbr></td>
+  <td align='right' id="Country">NA</td>
+</tr>
+<tr>
   <td><abbr title="The type of company">Category</abbr></td>
   <td align='right' id="Category">NA</td>
 </tr>
