Update text and fullscreen button

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <!-- splash -->
 <div id="welcome" class="welcome">
 <h1> Welcome to the England and Wales land ownership map</h1>
-<p>This map is intended to help people understand land ownership in England and Wales. It maps data published by the <a href = "https://www.gov.uk/government/organisations/land-registry">Land Registry</a>. For code and more information on data and methods see the <a href="https://github.com/mem48/LandOwnership/">GitHub repo</a>.</p>
+<p>This map is intended to aid public understanding of land ownership in England and Wales. It maps data published by the <a href = "https://www.gov.uk/government/organisations/land-registry">Land Registry</a>. For code and more information on data and methods see the <a href="https://github.com/mem48/LandOwnership/">GitHub repo</a>.</p>
 
 
 
@@ -81,7 +81,7 @@ target="dummyframe">
 <p>The <a href="https://use-land-property-data.service.gov.uk/datasets/ccod/licence/view">licence</a> for the data published by the Land Registry requires that we <i>"maintain End-User Records ... for the purpose of auditing compliance with the terms of this Licence and/or for the prevention and/or detection of crime"</i>. Therefore we ask for your name and record the time you visited the site. We won't share this data with anybody unless the Land Registry requires us to as part of an audit. </p>
 
 <h2>Terms of use</h2>
-<p>This website is for personal, non-commercial use. The information is illustrative and may contain errors or missing data. You must not attempt to scrape or bulk download the data. You cannot embed or reproduce the maps or data without written consent.</p>
+<p>This website is for personal, non-commercial use. The information is illustrative and may contain errors or missing data. You must not attempt to scrape or bulk download the data. You cannot embed or reproduce the maps or data without written consent. Any use of this map must be consistent with the <a href="https://use-land-property-data.service.gov.uk/datasets/ccod/licence/view">Land Registry licence</a>.</p>
 
 <h2>Copyright Notice</h2>
 <p>This information is subject to Crown copyright and database rights 2022 and is reproduced with the <a href="https://use-land-property-data.service.gov.uk/datasets/inspire#conditions">permission of HM Land Registry</a>.</p>
