--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
   <p><label><input type="checkbox" id="landownerscheckbox" value="true" onclick="toggleLayer('landowners')" checked>Owner Points</label></p>
   <p><select id="layerinput" name="layerinput" onchange="switchLayer()" aria-label="Onwers Layer">
       <option value="Category" selected>Organisation type</option>
-      <option value="geocode_type">Geocoding Accuracy</option>
+      <option value="geocode_type">Geocoding accuracy</option>
       <option value="Country">Country of registration</option>
   </select></p>
 </div>
 
 <!-- legend -->
-<div style="position: absolute; top: 350px; left: 10px; z-index: 9; opacity: 0.8; background-color: #EBEBEB;" id="legend">
+<div style="position: absolute; top: 350px; left: 10px; z-index: 9; opacity: 0.8; background-color: #EBEBEB;" id="legend" class="legend">
 </div>
 
 
