--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <option value="Category" selected>Organisation type</option>
       <option value="geocode_type">Geocoding accuracy</option>
       <option value="Country">Country of registration</option>
+      <option value="Tenure">Tenure</option>
   </select></p>
 </div>
 
