switch to pmtiles

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
   gtag('config', 'G-SFVXHLPJ8H');
 </script>
 
-<!-- Set Up Mapbox -->
+<!-- Set Up Maplibre -->
 <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
 <link href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet" />
 <link rel="stylesheet" href="web/style.css">
-
+<script src="https://unpkg.com/pmtiles/dist/index.js"></script>
 
 </head>
 <body>
