Local pmtiles lib

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
 <link href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet" />
 <link rel="stylesheet" href="web/style.css">
-<script src="https://unpkg.com/pmtiles/dist/index.js"></script>
+<script src="web/lib/pmtiles/index.js"></script>
 
 </head>
 <body>
