--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div>
   <h1>This website has moved</h1>
   <p><img src="https://www.carbon.place/images/thumbnail.jpg" alt="Carbon & Place logo" width="200px"></p>
-  <p>This project is now part of <a href="https://www.carbon.place/landownership">Carbon & Place</a>. Please see the new website for more details.</p>
+  <p>This project is now part of <a href="https://www.carbon.place/landownership/#/landowners/#8/51.482/-0.151">Carbon & Place</a>. Please see the new website for more details.</p>
   
 </div>  
   
